syntax = "proto3";

package greet;

option java_package = "com.test.greet";
option java_multiple_files = true;

message Greetings {
    string first_name =1;
    string last_name =2;
}

message GreetRequest {
    Greetings greetings =1;
}

message GreetResponse {
    Greetings result =1;
}

service GreetService {
    rpc  Greet (GreetRequest) returns (GreetResponse) {};
}


